@@ -24,39 +24,13 @@
 #include <string.h>
 
 // Define list of available encoder extensions.
-const char* encoder_list[] =
+static const char* encoder_list[] =
 {
     "mp3",  // TYPE_MP3
     "mp4",  // TYPE_MP4
     "wav",  // TYPE_WAV
     "ogg",  // TYPE_OGG
     "webm", // TYPE_WEBM
-    NULL
-};
-
-// Define list of available decoder extensions.
-const char* decoder_list[] =
-{
-    "avi",
-    "flac",
-    "ogg",
-    "oga",
-    "ogv",
-    "mp4",
-    "m4a",
-    "m4v",
-    "mp3",
-    "webm",
-    "flv",
-    "mpg",
-    "ts",
-    "mov",
-    "m2ts",
-    "mkv",
-    "vob",
-    "wma",
-    "wmv",
-    "rm",
     NULL
 };
 
@@ -71,22 +45,6 @@ int check_encoder(const char* type)
     for (int n = 0; encoder_list[n]; n++)
     {
         if (!strcasecmp(type, encoder_list[n]))
-        {
-            found = -1;
-            break;
-        }
-    }
-    return found;
-}
-
-// Check if a decoder is available to decode from the specified type.
-int check_decoder(const char* type)
-{
-    int found = 0;
-
-    for (int n = 0; decoder_list[n]; n++)
-    {
-        if (!strcasecmp(type, decoder_list[n]))
         {
             found = -1;
             break;
